--- a/.github/workflows/create-tokens.yml
+++ b/.github/workflows/create-tokens.yml
@@ -12,11 +12,15 @@ jobs:
       # Install dependencies
       - run: npm install
       # Transform Figma Tokens JSON to something Style Dictionary can read
-      - run: npx token-transformer tokens.json tokens/global.json global
+      - run: npx token-transformer tokens.json tokens/foundation.json foundation
       # Create a light theme, exclude the global tokens
-      - run: npx token-transformer tokens.json tokens/light.json global,light,theme global
-      # Create a dark theme, exclude the global tokens
-      - run: npx token-transformer tokens.json tokens/dark.json global,dark,theme global
+      - run: npx token-transformer tokens.json tokens/agree-culture.json foundation,agree-culture,theme foundation
+      # Create a light theme, exclude the global tokens
+      - run: npx token-transformer tokens.json tokens/agree-fisheries.json foundation,agree-fisheries,theme foundation
+      # Create a light theme, exclude the global tokens
+      - run: npx token-transformer tokens.json tokens/agree-livestock.json foundation,agree-livestock,theme foundation
+      # Create a light theme, exclude the global tokens
+      - run: npx token-transformer tokens.json tokens/agree-market.json foundation,agree-market,theme foundation
       # Convert tokens according to Style Dictionary config
       - run: node build.js
       # Add files that were created during a run, e.g. created files from style dictionary or token-transformer.
