--- a/package.json
+++ b/package.json
@@ -1,9 +1,61 @@
 {
-    "name": "my-app",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {},
+  "version": "1.0.0",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
+  "scripts": {
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
+  },
+  "peerDependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "name": "@sample/theme",
+  "author": "Telkom Design",
+  "module": "dist/theme.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/theme.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/theme.esm.js",
+      "limit": "10 KB"
+    }
+  ],
+  "devDependencies": {
+    "@size-limit/preset-small-lib": "^7.0.5",
+    "husky": "^7.0.4",
+    "size-limit": "^7.0.5",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
+  },
     "dependencies": {
-        "style-dictionary": "^3.0.2"
+        "style-dictionary": "^3.0.2",
+        "@theme-ui/css": "^0.13.1",
+        "@theme-ui/preset-base": "^0.13.1",
+        "deepmerge": "^4.2.2"
     }
 }
