feat: Initial release

--- a/.github/workflows/create-tokens.yml
+++ b/.github/workflows/create-tokens.yml
@@ -25,3 +25,8 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update Tokens
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
