--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -17,7 +17,8 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "release": "curl https://api.github.com/repos/telkom-design/Theme-Logee-Website/dispatches -H \"Authorization: token ${PERSONAL_TOKEN}\" -d '{ \"event_type\": \"semantic-release\" }'"
   },
   "peerDependencies": {},
   "husky": {
@@ -56,6 +57,13 @@
         "style-dictionary": "^3.0.2",
         "@theme-ui/css": "^0.13.1",
         "@theme-ui/preset-base": "^0.13.1",
-        "deepmerge": "^4.2.2"
+        "deepmerge": "^4.2.2",
+        "@semantic-release/changelog": "^5.0.1",
+        "@semantic-release/commit-analyzer": "^8.0.1",
+        "@semantic-release/git": "^9.0.0",
+        "@semantic-release/github": "^7.0.7",
+        "@semantic-release/npm": "^7.0.5",
+        "@semantic-release/release-notes-generator": "^9.0.1",
+        "semantic-release": "^17.0.8"
     }
 }
