--- a/package.json
+++ b/package.json
@@ -95,12 +95,9 @@
         "@theme-ui/css": "^0.13.1",
         "@theme-ui/preset-base": "^0.13.1",
         "deepmerge": "^4.2.2",
-        "@semantic-release/changelog": "^5.0.1",
-        "@semantic-release/commit-analyzer": "^8.0.1",
-        "@semantic-release/git": "^9.0.0",
-        "@semantic-release/github": "^7.0.7",
-        "@semantic-release/npm": "^7.0.5",
-        "@semantic-release/release-notes-generator": "^9.0.1",
-        "semantic-release": "^17.0.8"
+        "@semantic-release/changelog": "^6.0.1",
+        "@semantic-release/git": "^10.0.1",
+        "conventional-changelog-conventionalcommits": "^5.0.0",
+        "semantic-release": "^19.0.3"
     }
 }
