--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.1",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -17,8 +17,7 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why",
-    "release": "curl https://api.github.com/repos/telkom-design/Theme-Logee-Website/dispatches -H \"Authorization: token ${PERSONAL_TOKEN}\" -d '{ \"event_type\": \"semantic-release\" }'"
+    "analyze": "size-limit --why"
   },
   "peerDependencies": {},
   "husky": {
@@ -52,6 +51,13 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/telkom-design/Theme-Logee-Website.git"
+  },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com"
   },
   "release": {
     "branches": [
