--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "url": "https://github.com/telkom-design/Theme-Logee-Website.git"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/:_authToken=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"
+    "registry": "https://npm.pkg.github.com"
   },
   "release": {
     "branches": [
