--- a/.github/workflows/create-tokens.yml
+++ b/.github/workflows/create-tokens.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.4.0
       # Install dependencies
-      - run: npm install
+      - run: npm ci
       # Transform Figma Tokens JSON to something Style Dictionary can read
       - run: npx token-transformer tokens.json src/resources/foundation.json foundation --expandTypography --expandShadow
       # Create a light theme, exclude the global tokens
@@ -23,7 +23,6 @@ jobs:
       - run: node build.js
       # Add files that were created during a run, e.g. created files from style dictionary or token-transformer.
       - name: Semantic release
-        if: success()
         env:
           CI: true
           GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
