--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,2 @@
-access=public
-package-lock=false
-auth=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
-registry=https://registry.npmjs.org/
+registry=https://nexus.playcourt.id/repository/npm-private/
+_auth=bnBtOm5wbTIzNDVA
