--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,2 @@
-registry=https://nexus.playcourt.id/repository/npm-private/
+registry = https://nexus.playcourt.id/repository/npm/
 _auth=bnBtOm5wbTIzNDVA
-access=public
-package-lock=false
