--- a/.github/workflows/create-tokens.yml
+++ b/.github/workflows/create-tokens.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.4.0
       # Install dependencies
-      - run: npm ci
+      - run: npm install
       # Transform Figma Tokens JSON to something Style Dictionary can read
       - run: npx token-transformer tokens.json src/resources/foundation.json foundation --expandTypography --expandShadow
       # Create a light theme, exclude the global tokens
@@ -38,8 +38,8 @@ jobs:
           registry-url: 'registry=https://nexus.playcourt.id/repository/npm/'
       - name: Publish
         run: |
-              npm unpublish @legion-ui/theme-logee-sales --force
-              yarn publish
+              npm unpublish @legion-ui/theme-logee --force
+              npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
       - name: Saving changes
