--- a/.github/workflows/create-tokens.yml
+++ b/.github/workflows/create-tokens.yml
@@ -22,8 +22,8 @@ jobs:
       # Create a light theme, exclude the global tokens
       - run: node build.js
       # Add files that were created during a run, e.g. created files from style dictionary or token-transformer.
-      - name:  'Automated Version Bump'
-        uses:  'phips28/gh-action-bump-version@master'
+      - name: 'Automated Version Bump'
+        uses: 'phips28/gh-action-bump-version@master'
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
         with:
@@ -35,11 +35,11 @@ jobs:
           registry-url: 'registry=https://nexus.playcourt.id/repository/npm-private/'
       - name: Publish
         run: |
-              npm unpublish @legion-ui/theme-logee --force
-              npm publish
+          npm unpublish @legion-ui/theme-logee --force
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
       - name: Saving changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "update: theme"
+          commit_message: 'update: theme'
