--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry = https://nexus.playcourt.id/repository/npm/
+registry=https://nexus.playcourt.id/repository/npm-private/
 _auth=bnBtOm5wbTIzNDVA
