Modify npmrc to include registry npmjs

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-registry=https://nexus.playcourt.id/repository/npm-private/
+@npm:registry=https://nexus.playcourt.id/repository/npm-private/
+registry=registry.npmjs.org
 _auth=bnBtOm5wbTIzNDVA
