--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-@npm:registry=https://nexus.playcourt.id/repository/npm-private/
-registry=registry.npmjs.org
+registry=https://nexus.playcourt.id/repository/npm-private/
 _auth=bnBtOm5wbTIzNDVA
