update npmrc registry

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry=https://nexus.playcourt.id/repository/npm-private/
+registry=https://nexus.playcourt.id/repository/npm/
 _auth=bnBtOm5wbTIzNDVA
